--- a/trunk/Mapper/Mapper.csproj
+++ b/trunk/Mapper/Mapper.csproj
@@ -40,20 +40,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IMapModule.cs" />
+    <Compile Include="Configuration\IMapModule.cs" />
     <Compile Include="IObjectStorageFactory.cs" />
-    <Compile Include="MapContainer.cs" />
-    <Compile Include="MapModule.cs" />
+    <Compile Include="Configuration\MapContainer.cs" />
+    <Compile Include="Configuration\MapModule.cs" />
     <Compile Include="IObjectStorage.cs" />
     <Compile Include="IFluentSyntax.cs" />
-    <Compile Include="IMapConfiguration.cs" />
-    <Compile Include="IMapContainer.cs" />
+    <Compile Include="Configuration\IMapConfiguration.cs" />
+    <Compile Include="Configuration\IMapContainer.cs" />
     <Compile Include="IClassMapper.cs" />
     <Compile Include="IPropertyMapInfo.cs" />
-    <Compile Include="IPropertyMapOptions.cs" />
+    <Compile Include="Configuration\IPropertyMapOptions.cs" />
     <Compile Include="PropertyMapOptions.cs" />
-    <Compile Include="IValueFormatter.cs" />
-    <Compile Include="ClassMap.cs" />
+    <Compile Include="Configuration\IValueFormatter.cs" />
+    <Compile Include="Configuration\ClassMap.cs" />
     <Compile Include="ClassMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PropertyExpressionHelper.cs" />
