--- a/Mapper/Mapper.csproj
+++ b/Mapper/Mapper.csproj
@@ -33,11 +33,6 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Configuration\IMapModule.cs" />
@@ -49,15 +44,15 @@
     <Compile Include="Configuration\IMapConfiguration.cs" />
     <Compile Include="Configuration\IMapContainer.cs" />
     <Compile Include="IClassMapper.cs" />
-    <Compile Include="IPropertyMapInfo.cs" />
+    <Compile Include="Configuration\IPropertyMapInfo.cs" />
     <Compile Include="Configuration\IPropertyMapOptions.cs" />
-    <Compile Include="PropertyMapOptions.cs" />
+    <Compile Include="Configuration\PropertyMapOptions.cs" />
     <Compile Include="Configuration\IValueFormatter.cs" />
     <Compile Include="Configuration\ClassMap.cs" />
     <Compile Include="ClassMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PropertyExpressionHelper.cs" />
-    <Compile Include="PropertyMapInfo.cs" />
+    <Compile Include="Configuration\PropertyMapInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
