Added support TypeConverters

--- a/Mapper/Mapper.csproj
+++ b/Mapper/Mapper.csproj
@@ -36,6 +36,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Configuration\IMapModule.cs" />
+    <Compile Include="Configuration\ITypeConverter.cs" />
+    <Compile Include="Configuration\TypeConverter.cs" />
     <Compile Include="IObjectStorageFactory.cs" />
     <Compile Include="Configuration\MapContainer.cs" />
     <Compile Include="Configuration\MapModule.cs" />
