--- a/Mapper/Mapper.csproj
+++ b/Mapper/Mapper.csproj
@@ -36,26 +36,27 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Configuration\IMapModule.cs" />
-    <Compile Include="Configuration\ITypeConverter.cs" />
-    <Compile Include="Configuration\TypeConverter.cs" />
-    <Compile Include="EnumToIntConverter.cs" />
+    <Compile Include="Converters\ITypeConverter.cs" />
+    <Compile Include="Converters\TypeConverter.cs" />
+    <Compile Include="Converters\ValueFormatter.cs" />
+    <Compile Include="Converters\EnumToIntConverter.cs" />
     <Compile Include="Helpers\Check.cs" />
     <Compile Include="IObjectStorageFactory.cs" />
     <Compile Include="Configuration\MapContainer.cs" />
     <Compile Include="Configuration\MapModule.cs" />
     <Compile Include="IObjectStorage.cs" />
     <Compile Include="Helpers\IFluentSyntax.cs" />
-    <Compile Include="Configuration\IMapConfiguration.cs" />
+    <Compile Include="Configuration\IClassMap.cs" />
     <Compile Include="Configuration\IMapContainer.cs" />
     <Compile Include="IClassMapper.cs" />
     <Compile Include="Configuration\IPropertyMapInfo.cs" />
     <Compile Include="Configuration\IPropertyMapOptions.cs" />
     <Compile Include="Configuration\PropertyMapOptions.cs" />
-    <Compile Include="Configuration\IValueFormatter.cs" />
+    <Compile Include="Converters\IValueFormatter.cs" />
     <Compile Include="Configuration\ClassMap.cs" />
     <Compile Include="ClassMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="PropertyExpressionHelper.cs" />
+    <Compile Include="Helpers\PropertyExpressionHelper.cs" />
     <Compile Include="Configuration\PropertyMapInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
