Support of Nullable types refactoring

--- a/Mapper.Tests/Mapper.Tests.csproj
+++ b/Mapper.Tests/Mapper.Tests.csproj
@@ -51,6 +51,8 @@
     <Compile Include="ConcreteClasses\Department.cs" />
     <Compile Include="ConcreteClasses\DepartmentModule.cs" />
     <Compile Include="ConcreteClasses\Gender.cs" />
+    <Compile Include="ConcreteClasses\JobInfo.cs" />
+    <Compile Include="ConcreteClasses\JobInfoMap.cs" />
     <Compile Include="ConcreteClasses\ObjectStorage.cs" />
     <Compile Include="ConcreteClasses\ObjectStorageFactory.cs" />
     <Compile Include="ConcreteClasses\TestMapContainer.cs" />
