--- a/trunk/Mapper/Mapper.csproj
+++ b/trunk/Mapper/Mapper.csproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <Compile Include="Configuration\IMapModule.cs" />
     <Compile Include="Configuration\MapperMappingException.cs" />
+    <Compile Include="Configuration\PropertyKind.cs" />
     <Compile Include="Converters\ITypeConverter.cs" />
     <Compile Include="Converters\TypeConverter.cs" />
     <Compile Include="Converters\ValueFormatter.cs" />
