support different key type for Dictionary property and Inheritance

--- a/Mapper/Mapper.csproj
+++ b/Mapper/Mapper.csproj
@@ -67,7 +67,7 @@
     <Compile Include="Mappers\DictionaryMapper.cs" />
     <Compile Include="Mappers\IMapper.cs" />
     <Compile Include="Mappers\IMapperRegistry.cs" />
-    <Compile Include="Mappers\InheritanceClassMapper.cs" />
+    <Compile Include="InheritanceClassMapper.cs" />
     <Compile Include="Mappers\MapperRegistry.cs" />
     <Compile Include="Mappers\NullableMapper.cs" />
     <Compile Include="Mappers\ReferenceMapper.cs" />
